# 3DRISMHI-1.0.316

./: GPL3LICENSE  Makefile.am  Makefile.in  README.md  UPDATE.md  config.hin  configure  configure.ac
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
demo/: commands.sh
demo/solvent/: tip3p  tip3p.gaff
demo/solvent/xvv-gaff-310K/: gvv.001nm.tip3p  zeta.01nm.tip3p
demo/step-1.solute-confomation/: solute.gro
demo/step-2.solute-ff/: ANTECHAMBER_AC.AC  ANTECHAMBER_AC.AC0  ANTECHAMBER_AM1BCC.AC  ANTECHAMBER_AM1BCC_PRE.AC  ANTECHAMBER_BOND_TYPE.AC0  solute.ff  sqm.in  sqm.out
demo/step-2.solute-ff/solute.acpype/: ANTECHAMBER_PREP.AC  ATOMTYPE.INF  em.mdp  md.mdp  solute.mol2  solute.pkl  solute_AC.inpcrd  solute_AC.lib  solute_AC.prmtop  solute_CNS.inp  solute_CNS.par  solute_CNS.top  solute_GMX.gro  solute_GMX.itp  solute_GMX.top  solute_GMX_OPLS.itp  solute_GMX_OPLS.top  solute_user_gaff.mol2
demo/step-3.run-rismhi3d/: log.txt  output.ts4s
example/: ala2.gro  ala2.solute  ala2.top  run-test.sh  tip3p.gaff
example/xvv/: gvv.tip3p.0001nm
solvent/: acetone.gaff  acetonitrile.gaff  benzene.gaff  chloroform.gaff  dichloromethane.gaff  dmso.gaff  methanol.gaff  nitromethane.gaff  pyridine.gaff  thf.gaff  tip3p.gaff  toluene.gaff
solvent/xvv-gaff-310K/: gvv.0001nm.tip3p  gvv.001nm.acetonitrile  gvv.01nm.acetone  gvv.01nm.acetonitrile  gvv.01nm.benzene  gvv.01nm.chloroform  gvv.01nm.cyclohexane  gvv.01nm.cyclohexanea  gvv.01nm.dichloromethane  gvv.01nm.diethyleneglycol  gvv.01nm.dmso  gvv.01nm.methanol  gvv.01nm.nitromethane  gvv.01nm.pyridine  gvv.01nm.thf  gvv.01nm.tip3p  gvv.01nm.toluene  zeta.01nm.acetone  zeta.01nm.acetonitrile  zeta.01nm.benzene  zeta.01nm.chloroform  zeta.01nm.cyclohexane  zeta.01nm.dichloromethane  zeta.01nm.diethyleneglycol  zeta.01nm.dmso  zeta.01nm.methanol  zeta.01nm.nitromethane  zeta.01nm.pyridine  zeta.01nm.thf  zeta.01nm.toluene
src/: Element.h  INSTALLATION_INSTRUCTIONS.txt  PDBAtom.cpp  String2.cpp  StringX.cpp  Vector.cpp  benchmark.txt  common.cpp  compile-demo.sh  compress.cpp  compress32.cpp  crc32_zlib.h  experimental.cpp  experimental.h  generate-sigma-shrinking-2.sh  gensolvent.cpp  gmxtop2solute.cpp  header.h  heatmap.cpp  local_time.cpp  main-analysis-param.cpp  main-array.h  main-atom-lists.h  main-build-ff.cpp  main-command.cpp  main-common.cpp  main-compress.cpp  main-diis.cpp  main-energy-report.cpp  main-energy-report.h  main-export.cpp  main-header.h  main-hi.cpp  main-interactive.cpp  main-matrix.cpp  main-mp.cpp  main-preprocessing.cpp  main-rism.cpp  main-sub.cpp  main-sys.h  (+6 more)
user manual/: rismhi3d-user-manual.tex  rismhi3d-user-manuel.bib  rismhi3d-user-manuel.tex  user-manual.bib  user-manual.tex
